packages/typ/tests/fixtures/diagnostics/0893_gadt_witness_branch_return_mismatch_04.ml.expected
File "0893_gadt_witness_branch_return_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0893_gadt_witness_branch_return_mismatch_04 is not a valid module name.

File "0893_gadt_witness_branch_return_mismatch_04.ml", line 6, characters 18-22:
6 |   | WInt_delta -> true
                      ^^^^
Error: This expression should not be a boolean literal, the expected type is
       a
